added storefront url

--- a/manifest.json
+++ b/manifest.json
@@ -126,11 +126,11 @@
     },
     {
       "key":"website.b2ctelco.http",
-      "value":"<website_b2ctelco_http_URL>"
+      "value":"http://accstorefront.cgxy-sadaqatgr1-d1-public.model-t.cc.commerce.ondemand.com/"
     },
     {
       "key":"website.b2ctelco.https",
-      "value":"<website_b2ctelco_https_URL>"
+      "value":"https://accstorefront.cgxy-sadaqatgr1-d1-public.model-t.cc.commerce.ondemand.com/"
     },
     {
       "key":"website.media.http",
