corrected storefront addon property

--- a/manifest.json
+++ b/manifest.json
@@ -180,7 +180,7 @@
 		},
 		{
 			"addon": "personalizationaddon",
-			"storefront": "<yourcustomstorefront>",
+			"storefront": "yacceleratorstorefront",
 			"template": "yacceleratorstorefront"
 		}
 	],
