--- a/manifest.json
+++ b/manifest.json
@@ -146,6 +146,10 @@
 		{
 			"key": "website.utilities.https",
 			"value": "<website_utilities_http_URL>"
+		},
+		{
+			"key": "lang.packs",
+			"value": "de,en,es,es_CO,fr,it,ja,ko,pt,ru,zh,zh_TW,hi,id,cs,cy"
 		}
 	],
 	"storefrontAddons": [{
