--- a/manifest.json
+++ b/manifest.json
@@ -149,7 +149,7 @@
 		},
 		{
 			"key": "lang.packs",
-			"value": "de,en,es,es_CO,fr,it,ja,ko,pt,ru,zh,zh_TW,hi,id,cs,cy"
+			"value": "en"
 		}
 	],
 	"storefrontAddons": [{
