Revert "removed hybris telcosuite"
This reverts commit 7068f3f6c8b4a1a6e55d6c5a88810852a89fd6b1.

--- a/manifest.json
+++ b/manifest.json
@@ -48,6 +48,10 @@
 		"oauth2",
 		"mediaweb"
 	],
+	"extensionPacks": [{
+		"name": "hybris-b2ctelco-suite",
+		"version": "1907.0"
+	}],
 	"properties": [
 		{
 			"key": "lang.packs",
