--- a/manifest.json
+++ b/manifest.json
@@ -1,358 +1,347 @@
 {
-	"commerceSuiteVersion": "1905.0",
-	"extensions": [
-		"acceleratorcms",
-		"adaptivesearchbackoffice",
-		"addonsupport",
-		"b2ctelcobackoffice",
-		"b2ctelcofulfillmentprocess",
-		"b2ctelcostore",
-		"utilitiesstore",
-		"mediastore",
-		"b2ctelcoaddon",
-		"b2ctelcooccaddon",
-		"b2ctelcotmfwebservices",
-		"b2ctelcowebservices",
-		"commerceservicesbackoffice",
-		"solrfacetsearchbackoffice",
-		"solrserver",
-		"subscriptionbackoffice",
-		"yacceleratorstorefront",
-		"yacceleratorcore",
-		"ycommercewebservices",
-		"cmsbackoffice",
-		"cmswebservices",
-		"previewwebservices",
-		"smarteditwebservices",
-		"cmssmarteditwebservices",
-		"permissionswebservices",
-		"smarteditaddon",
-		"cmssmartedit",
-		"customerticketingaddon",
-		"customersupportbackoffice",
-		"personalizationwebservices",
-		"previewpersonalizationweb",
-		"personalizationcmsweb",
-		"personalizationsmartedit",
-		"personalizationservicesbackoffice",
-		"personalizationcmsbackoffice",
-		"personalizationservices",
-		"personalizationfacades",
-		"acceleratorservices",
-		"assistedservicefacades",
-		"assistedservicestorefront",
-		"assistedservicecustomerinterestsaddon",
-		"modeltacceleratorservices",
-		"smartedit",
-		"oauth2",
-		"mediaweb",
-		"multicountrysampledataaddon"
-	],
-	"extensionPacks": [{
-		"name": "hybris-b2ctelco-suite",
-		"version": "1907.0"
-	}],
-	"properties": [
-		{
-			"key": "lang.packs",
-			"value": "en"
-		},
-		{
-			"key": "impex.import.workers",
-			"value": "1"
-		},
-		{
-			"key": "catalog.sync.workers",
-			"value": "1"
-		},
-		{
-			"key": "kernel.events.cluster.jgroups.channel",
-			"value": "disable"
-		},
-		{
-			"key": "datahub.publication.saveImpex",
-			"value": ""
-		},
-		{
-			"key": "kernel.autoInitMode",
-			"value": "update"
-		},
-		{
-			"key": "mail.from",
-			"value": "<your_email>"
-		},
-		{
-			"key": "mail.replyto",
-			"value": "<your_email>"
-		},
-		{
-			"key": "mail.smtp.server",
-			"value": "<your_mail_smtp_sever>"
-		},
-		{
-			"key": "mail.smtp.port",
-			"value": "<your_mail_smtp_severt_port>"
-		},
-		{
-			"key": "mail.smtp.user",
-			"value": "<your_email>"
-		},
-		{
-			"key": "mail.smtp.password",
-			"value": "<your_password>"
-		},
-		{
-			"key": "mail.smtp.starttls.enable",
-			"value": "true"
-		},
-		{
-			"key": "mail.use.tls",
-			"value": "true"
-		},
-		{
-			"key": "storefront.show.debug.info",
-			"value": "true"
-		},
-		{
-			"key": "commerceservices.default.desktop.ui.experience",
-			"value": "responsive"
-		},
-		{
-			"key": "googleEmbedApiKey",
-			"value": "AIzaSyD34TXbUsiyJnysJ-1Un657elxVy_OYpTs"
-		},
-		{
-			"key": "storefront.show.checkout.flows",
-			"value": "true"
-		},
-		{
-			"key": "b2ctelcotmfwebservices.api.base.url",
-			"value": "<b2ctelcotmfwebservices_api_base_URL>"
-		},
-		{
-			"key": "website.b2ctelco.http",
-			"value": "<website_b2ctelco_http_URL>"
-		},
-		{
-			"key": "website.b2ctelco.https",
-			"value": "<website_b2ctelco_https_URL>"
-		},
-		{
-			"key": "website.media.http",
-			"value": "<website_media_http_URL>"
-		},
-		{
-			"key": "website.media.https",
-			"value": "<website_media_https_URL>"
-		},
-		{
-			"key": "website.utilities.http",
-			"value": "<website_utilities_http_URL>"
-		},
-		{
-			"key": "website.utilities.https",
-			"value": "<website_utilities_http_URL>"
-		}
-	],
-	"storefrontAddons": [{
-			"addon": "b2ctelcoaddon",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		},
-		{
-			"addon": "smarteditaddon",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		},
-		{
-			"addon": "assistedservicestorefront",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		},
-		{
-			"addon": "assistedservicecustomerinterestsaddon",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		},
-		{
-			"addon": "customerticketingaddon",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		},
-		{
-			"addon": "b2ctelcooccaddon",
-			"storefront": "ycommercewebservices",
-			"template": "ycommercewebservices"
-		},
-		{
-			"addon": "personalizationaddon",
-			"storefront": "yacceleratorstorefront",
-			"template": "yacceleratorstorefront"
-		}
-	],
-	"tests": {
-		"extensions": [
-			"b2ctelcobackoffice",
-			"b2ctelcofulfillmentprocess",
-			"b2ctelcostore",
-			"utilitiesstore",
-			"mediastore",
-			"b2ctelcoaddon",
-			"b2ctelcotmfwebservices",
-			"b2ctelcowebservices"
-		],
-		"annotations": [
-			"UnitTests",
-			"IntegrationTests"
-		],
-		"packages": [
-			"de.hybris.platform.*"
-		]
-	},
-	"webTests": {
-		"extensions": [
-			"b2ctelcowebservices"
-		],
-		"excludedPackages": [
-			"de.hybris.platform.*"
-		]
-	},
-	"aspects": [{
-			"name": "backoffice",
-			"properties": [{
-					"key": "test.property.1",
-					"value": "test.property-1-value-prod-backoffice",
-					"persona": "production"
-				},
-				{
-					"key": "test.property.2",
-					"value": "test.property-2-value-backoffice"
-				}
-			],
-			"webapps": [{
-					"name": "hac",
-					"contextPath": "/hac"
-				},
-				{
-					"name": "mediaweb",
-					"contextPath": "/medias"
-				},
-				{
-					"name": "backoffice",
-					"contextPath": ""
-				}
-			]
-		},
-		{
-			"name": "accstorefront",
-			"properties": [{
-					"key": "spring.session.enabled",
-					"value": "false"
-				},
-				{
+  "commerceSuiteVersion": "1905.0",
+  "extensions": [
+     "acceleratorcms",
+     "adaptivesearchbackoffice",
+     "addonsupport",
+     "b2ctelcobackoffice",
+     "b2ctelcofulfillmentprocess",
+     "b2ctelcostore",
+     "utilitiesstore",
+     "mediastore",
+     "b2ctelcoaddon",
+     "b2ctelcooccaddon",
+     "b2ctelcotmfwebservices",
+     "b2ctelcowebservices",
+     "commerceservicesbackoffice",
+     "solrfacetsearchbackoffice",
+     "solrserver",
+     "subscriptionbackoffice",
+     "yacceleratorstorefront",
+     "yacceleratorcore",
+     "ycommercewebservices",
+     "cmsbackoffice",
+     "cmswebservices",
+     "previewwebservices",
+     "smarteditwebservices",
+     "cmssmarteditwebservices",
+     "permissionswebservices",
+     "smarteditaddon",
+     "cmssmartedit",
+     "customerticketingaddon",
+     "customersupportbackoffice",
+     "personalizationwebservices",
+     "previewpersonalizationweb",
+     "personalizationcmsweb",
+     "personalizationsmartedit",
+     "personalizationservicesbackoffice",
+     "personalizationcmsbackoffice",
+     "personalizationservices",
+     "personalizationfacades",
+     "acceleratorservices",
+     "assistedservicefacades",
+     "assistedservicestorefront",
+     "assistedservicecustomerinterestsaddon",
+    "modeltacceleratorservices"
+  ],
 
-					"key": "storefrontContextRoot",
-					"value": "/yacceleratorstorefront"
-				}
-			],
-			"webapps": [{
-					"name": "mediaweb",
-					"contextPath": "/medias"
-				},
-				{
-					"name": "yacceleratorstorefront",
-					"contextPath": ""
-				},
-				{
-					"name": "b2ctelcowebservices",
-					"contextPath": "/b2ctelcowebservices"
-				},
-				{
-					"name": "oauth2",
-					"contextPath": "/authorizationserver"
-				},
-				{
-					"name": "acceleratorservices",
-					"contextPath": "/acceleratorservices"
-				},
-				{
-					"name": "smartedit",
-					"contextPath": "/smartedit"
-				},
-				{
-					"name": "cmssmartedit",
-					"contextPath": "/cmssmartedit"
-				},
-				{
-					"name": "cmssmarteditwebservices",
-					"contextPath": "/cmssmarteditwebservices"
-				},
-				{
-					"name": "smarteditwebservices",
-					"contextPath": "/smarteditwebservices"
-				},
-				{
-					"name": "cmscockpit",
-					"contextPath": "/cmscockpit"
-				},
-				{
-					"name": "cmswebservices",
-					"contextPath": "/cmswebservices"
-				},
-				{
-					"name": "cscockpit",
-					"contextPath": "/cscockpit"
-				},
-				{
-					"name": "maintenanceweb",
-					"contextPath": "/maintenance"
-				},
-				{
-					"name": "permissionswebservices",
-					"contextPath": "/permissionswebservices"
-				},
-				{
-					"name": "personalizationsmartedit",
-					"contextPath": "/personalizationsmartedit"
-				},
-				{
-					"name": "personalizationwebservices",
-					"contextPath": "/personalizationwebservices"
-				},
-				{
-					"name": "previewwebservices",
-					"contextPath": "/previewwebservices"
-				},
-				{
-					"name": "ycommercewebservices",
-					"contextPath": "/rest"
-				},
-				{
-					"name": "b2ctelcotmfwebservices",
-					"contextPath": "/b2ctelcotmfwebservices"
-				},
-				{
-					"name": "personalizationpromotionssmartedit",
-					"contextPath": "/personalizationpromotionssmartedit"
-				},
-				{
-					"name": "personalizationsearchsmartedit",
-					"contextPath": "/personalizationsearchsmartedit"
-				}
-			]
-		},
-		{
-			"name": "backgroundProcessing",
-			"properties": [],
-			"webapps": [{
-					"name": "hac",
-					"contextPath": ""
-				},
-				{
-					"name": "mediaweb",
-					"contextPath": "/medias"
-				}
-			]
-		}
-	]
+  "extensionPacks": [
+       {
+           "name": "hybris-b2ctelco-suite",
+            "version": "1907.0"
+       }
+    ],
+  "properties": [
+    {
+      "key": "impex.import.workers",
+      "value": "1"
+    },
+	{
+      "key": "catalog.sync.workers",
+      "value": "1"
+    },
+    {
+      "key": "kernel.events.cluster.jgroups.channel",
+      "value": "disable"
+    },
+    {
+      "key": "datahub.publication.saveImpex",
+      "value": ""
+    },
+    {
+      "key": "kernel.autoInitMode",
+      "value": "update"
+    },
+    {
+      "key": "mail.from",
+      "value": "<your_email>"
+    },
+    {
+      "key": "mail.replyto",
+      "value": "<your_email>"
+    },
+    {
+      "key": "mail.smtp.server",
+      "value": "<your_mail_smtp_sever>"
+    },
+    {
+      "key": "mail.smtp.port",
+      "value": "<your_mail_smtp_severt_port>"
+    },
+    {
+      "key": "mail.smtp.user",
+      "value": "<your_email>"
+    },
+    {
+      "key": "mail.smtp.password",
+      "value": "<your_password>"
+    },
+    {
+      "key": "mail.smtp.starttls.enable",
+      "value": "true"
+    },
+    {
+      "key": "mail.use.tls",
+      "value": "true"
+    },
+    {
+      "key": "storefront.show.debug.info",
+      "value": "true"
+    },
+    {
+      "key": "commerceservices.default.desktop.ui.experience",
+      "value": "responsive"
+    },
+    {
+      "key": "googleEmbedApiKey",
+      "value": "AIzaSyD34TXbUsiyJnysJ-1Un657elxVy_OYpTs"
+    },
+    {
+      "key": "storefront.show.checkout.flows",
+      "value": "true"
+    },
+    {
+      "key" : "b2ctelcotmfwebservices.api.base.url",
+      "value" : "<b2ctelcotmfwebservices_api_base_URL>"
+    },
+    {
+      "key":"website.b2ctelco.http",
+      "value":"<website_b2ctelco_http_URL>"
+    },
+    {
+      "key":"website.b2ctelco.https",
+      "value":"<website_b2ctelco_https_URL>"
+    },
+    {
+      "key":"website.media.http",
+      "value":"<website_media_http_URL>"
+    },
+    {
+      "key":"website.media.https",
+      "value":"<website_media_https_URL>"
+    },
+    {
+      "key":"website.utilities.http",
+      "value":"<website_utilities_http_URL>"
+    },
+    {
+      "key":"website.utilities.https",
+      "value":"<website_utilities_http_URL>"
+    }
+  ],
+  "storefrontAddons": [
+    {
+      "addon": "b2ctelcoaddon",
+      "storefront": "yacceleratorstorefront",
+      "template": "yacceleratorstorefront"
+    },
+    {
+      "addon": "smarteditaddon",
+      "storefront": "yacceleratorstorefront",
+      "template": "yacceleratorstorefront"
+    },
+    {
+      "addon": "assistedservicestorefront",
+      "storefront": "yacceleratorstorefront",
+      "template": "yacceleratorstorefront"
+    },
+    {
+      "addon": "assistedservicecustomerinterestsaddon",
+      "storefront": "yacceleratorstorefront",
+      "template": "yacceleratorstorefront"
+    },
+    {
+      "addon": "customerticketingaddon",
+      "storefront": "yacceleratorstorefront",
+      "template": "yacceleratorstorefront"
+    },
+	{
+	  "addon": "b2ctelcooccaddon",
+      "storefront": "ycommercewebservices",
+      "template": "ycommercewebservices"
+	}
+  ],
+  "tests": {
+    "extensions": [    
+	"b2ctelcobackoffice",
+     "b2ctelcofulfillmentprocess",
+     "b2ctelcostore",
+     "utilitiesstore",
+     "mediastore",
+     "b2ctelcoaddon",
+     "b2ctelcotmfwebservices",
+     "b2ctelcowebservices"
+    ],
+    "annotations": [
+      "UnitTests",
+      "IntegrationTests"
+    ],
+    "packages": [
+      "de.hybris.platform.*"
+    ]
+  },
+  "webTests": {
+    "extensions": [
+      "b2ctelcowebservices"
+    ],
+    "excludedPackages": [
+      "de.hybris.platform.*"
+    ]
+  },
+  "aspects": [
+    {
+      "name": "backoffice",
+      "properties": [
+        {
+          "key": "test.property.1",
+          "value": "test.property-1-value-prod-backoffice",
+          "persona": "production"
+        },
+        {
+          "key": "test.property.2",
+          "value": "test.property-2-value-backoffice"
+        }
+      ],
+      "webapps": [
+        {
+          "name": "hac",
+          "contextPath": "/hac"
+        },
+        {
+          "name": "mediaweb",
+          "contextPath": "/medias"
+        },
+        {
+          "name": "backoffice",
+          "contextPath": ""
+        }
+      ]
+    },
+    {
+      "name": "accstorefront",
+      "properties": [
+        {
+          "key": "spring.session.enabled",
+          "value": "false"
+        },
+        {
+          
+"key":"storefrontContextRoot",
+          "value":"/yacceleratorstorefront"
+        }
+      ],
+      "webapps": [
+        {
+          "name": "mediaweb",
+          "contextPath": "/medias"
+        },
+        {
+          "name": "yacceleratorstorefront",
+          "contextPath": ""
+        },
+        {
+          "name": "b2ctelcowebservices",
+          "contextPath": "/b2ctelcowebservices"
+        },
+        {
+          "name":"oauth2",
+          "contextPath" :"/authorizationserver"
+        },
+        {
+          "name": "acceleratorservices",
+          "contextPath": "/acceleratorservices"
+        },
+        {
+          "name": "smartedit",
+          "contextPath": "/smartedit"
+        },
+        {
+          "name": "cmssmartedit",
+          "contextPath": "/cmssmartedit"
+        },
+        {
+          "name": "cmssmarteditwebservices",
+          "contextPath": "/cmssmarteditwebservices"
+        },
+        {
+          "name": "smarteditwebservices",
+          "contextPath": "/smarteditwebservices"
+        },
+        {
+          "name": "cmscockpit",
+          "contextPath": "/cmscockpit"
+        },
+        {
+          "name": "cmswebservices",
+          "contextPath": "/cmswebservices"
+        },
+        {
+          "name": "cscockpit",
+          "contextPath": "/cscockpit"
+        },
+        {
+          "name": "maintenanceweb",
+          "contextPath": "/maintenance"
+        },
+        {
+          "name": "permissionswebservices",
+          "contextPath": "/permissionswebservices"
+        },
+        {
+          "name": "personalizationsmartedit",
+          "contextPath": "/personalizationsmartedit"
+        },
+        {
+          "name": "personalizationwebservices",
+          "contextPath": "/personalizationwebservices"
+        },
+        {
+          "name": "previewwebservices",
+          "contextPath": "/previewwebservices"
+        },
+        {
+          "name": "ycommercewebservices",
+          "contextPath": "/rest"
+        },
+        {
+          "name" : "b2ctelcotmfwebservices",
+          "contextPath" : "/b2ctelcotmfwebservices"
+        }
+      ]
+    },
+    {
+      "name": "backgroundProcessing",
+      "properties": [],
+      "webapps": [
+        {
+          "name": "hac",
+          "contextPath": ""
+        },
+        {
+          "name": "mediaweb",
+          "contextPath": "/medias"
+        }
+      ]
+    }
+  ]
 }
